connecting db with node and sequlize, fethcing data at home with sequelize querry

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -133,7 +133,14 @@
         class="myProjects"
         style="background-color: rgb(248, 249,250); margin: 40px; text-align: center; padding: 40px"
       >
-        <h1>My Project</h1>
+        <div>
+
+          <h1>My Project</h1>
+        </div>
+        <div>
+          <a href="project" class="btn btn-secondary" style="float: right;">Add
+            New Project</a>
+        </div>
 
         <!-- My Projects -->
         <div
