add fetch data by sequelize query and createData by sequelize query

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -164,16 +164,16 @@
                           href="/projectDetail/{{this.id}}"
                           style="text-decoration: none; color: black; font-weight: bold;"
                         >
-                          {{this.title}}
-                          -
-                          {{this.createdAt}}
+                          {{this.projectName}}
+                          - 2024
+                          {{!-- {{this.createdAt}} --}}
                         </a>
                       </h5>
                       <p style="font-size: small;">
                         Durasi : 3 Bulan
                       </p>
                       <p class="card-text" style="text-align: justify;">
-                        {{this.content}}
+                        {{this.description}}
                       </p>
                       <div class="projectIcons" style="margin: 10px;">
                         <i
