--- a/views/editProject.hbs
+++ b/views/editProject.hbs
@@ -48,7 +48,28 @@
                 Project</a>
             </li>
           </ul>
-          <a href="contact" class="btn btn-secondary">Contact Me</a>
+          <div class="d-flex justify-content-end">
+            <ul class="navbar-nav me-auto mb-2 ms-5 mb-lg-0">
+              {{#if isLogin}}
+                <li class="nav-item">
+                  <a class="nav-link fw-bold active text-danger">Hello,
+                    {{user}}</a>
+                </li>
+                <li class="nav-item ms-3">
+                  <a class="nav-link" href="/logout">Logout</a>
+                </li>
+              {{else}}
+                <li class="nav-item">
+                  <a class="nav-link" href="/register">Register</a>
+                </li>
+                <li class="nav-item ms-3">
+                  <a class="nav-link" href="/login">Login</a>
+                </li>
+              {{/if}}
+            </ul>
+            <a class="btn btn-secondary btn-submit ms-5" href="/contact">Contact
+              Me</a>
+          </div>
         </div>
       </div>
     </nav>
