--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Me</title>
+    <title>Register</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -63,55 +63,60 @@
                   <a class="nav-link" href="/register">Register</a>
                 </li>
                 <li class="nav-item ms-3">
-                  <a class="nav-link" href="/login">Login</a>
+                  <a class="nav-link active" href="/login">Login</a>
                 </li>
               {{/if}}
             </ul>
             <a class="btn btn-secondary btn-submit ms-5" href="/contact">Contact
               Me</a>
           </div>
+
         </div>
       </div>
     </nav>
 
     <!-- end navbar -->
 
+    {{#if messages.danger}}
+      <div class="alert alert-danger" role="alert">
+        <div class="container">
+          {{messages.danger}}
+        </div>
+      </div>
+    {{/if}}
+
+    {{#if messages.succes}}
+      <div class="alert alert-success" role="alert">
+        <div class="container">
+          {{messages.success}}
+        </div>
+      </div>
+    {{/if}}
+
     <!-- form -->
 
     <form
       style="display: flex; flex-direction: column; align-items: center"
       class="formTest"
+      method="post"
+      action="/login"
     >
-      <h1 class="text-center mt-5 mb-5">GET IN TOUCH</h1>
+      <h1 class="text-center mt-5 mb-5">LOGIN TO YOUR ACCOUNT</h1>
 
       <div style="width: 500px">
         <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
-          <input type="text" class="form-control" id="name" />
-        </div>
-
-        <div class="mb-3">
           <label for="email" class="form-label">Email</label>
-          <input type="text" class="form-control" id="email" />
+          <input type="text" class="form-control" id="email" name="email" />
         </div>
 
         <div class="mb-3">
-          <label for="phoneNumber" class="form-label">Phone Number</label>
-          <input type="text" class="form-control" id="phoneNumber" />
-        </div>
-
-        <div class="mb-3">
-          <label for="subject" class="form-label">Subject</label>
-          <input type="text" class="form-control" id="subject" />
-        </div>
-
-        <div class="mt-3">
-          <label for="content" class="form-label">Your Message</label>
-          <textarea
+          <label for="password" class="form-label">Password</label>
+          <input
+            type="text"
             class="form-control"
-            id="content"
-            style="height: 100px"
-          ></textarea>
+            id="password"
+            name="password"
+          />
         </div>
 
         <div class="d-flex justify-content-end mt-5">
