--- a/views/register.hbs
+++ b/views/register.hbs
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Me</title>
+    <title>Register</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,7 +47,6 @@
               <a class="nav-link" aria-current="page" href="project">Add Project</a>
             </li>
           </ul>
-
           <div class="d-flex justify-content-end">
             <ul class="navbar-nav me-auto mb-2 ms-5 mb-lg-0">
               {{#if isLogin}}
@@ -60,7 +59,7 @@
                 </li>
               {{else}}
                 <li class="nav-item">
-                  <a class="nav-link" href="/register">Register</a>
+                  <a class="nav-link active" href="/register">Register</a>
                 </li>
                 <li class="nav-item ms-3">
                   <a class="nav-link" href="/login">Login</a>
@@ -80,38 +79,43 @@
 
     <form
       style="display: flex; flex-direction: column; align-items: center"
-      class="formTest"
+      method="post"
+      action="/register"
     >
-      <h1 class="text-center mt-5 mb-5">GET IN TOUCH</h1>
+      <h1 class="text-center mt-5 mb-5">REGISTER YOUR ACCOUNT</h1>
 
       <div style="width: 500px">
         <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
-          <input type="text" class="form-control" id="name" />
+          <label for="userName" class="form-label">Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="userName"
+            name="userName"
+            required
+          />
         </div>
 
         <div class="mb-3">
           <label for="email" class="form-label">Email</label>
-          <input type="text" class="form-control" id="email" />
-        </div>
-
-        <div class="mb-3">
-          <label for="phoneNumber" class="form-label">Phone Number</label>
-          <input type="text" class="form-control" id="phoneNumber" />
-        </div>
-
-        <div class="mb-3">
-          <label for="subject" class="form-label">Subject</label>
-          <input type="text" class="form-control" id="subject" />
-        </div>
-
-        <div class="mt-3">
-          <label for="content" class="form-label">Your Message</label>
-          <textarea
+          <input
+            type="email"
             class="form-control"
-            id="content"
-            style="height: 100px"
-          ></textarea>
+            id="email"
+            name="email"
+            required
+          />
+        </div>
+
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input
+            type="pasword"
+            class="form-control"
+            id="password"
+            name="password"
+            required
+          />
         </div>
 
         <div class="d-flex justify-content-end mt-5">
