--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
+    <title>Login</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -85,7 +85,7 @@
       </div>
     {{/if}}
 
-    {{#if messages.succes}}
+    {{#if messages.success}}
       <div class="alert alert-success" role="alert">
         <div class="container">
           {{messages.success}}
