add multer for upload image done, need to fix conditional rendering for download and edit delete

--- a/views/project.hbs
+++ b/views/project.hbs
@@ -83,6 +83,7 @@
       class="formTest"
       action="/project"
       method="post"
+      enctype="multipart/form-data"
     >
       <h1 class="text-center mt-5 mb-5">ADD MY PROJECT</h1>
 
