--- a/views/editProject.hbs
+++ b/views/editProject.hbs
@@ -186,7 +186,13 @@
         <!-- uploadImg -->
         <div class="mb-5 mt-3">
           <label for="image" class="form-label">Upload Image</label>
-          <input type="file" class="form-control" id="image" name="image" />
+          <input
+            type="file"
+            class="form-control"
+            id="image"
+            name="image"
+            value="{{data.imageUrl}}"
+          />
         </div>
         <div class="d-flex justify-content-end">
           <button type="submit" class="btn btn-secondary">Update Project</button>
