--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,7 +32,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/home">
+        <a class="navbar-brand" href="/">
           <img
             src="/assets/images/dumbways.png"
             style="width: 50px; margin-left: 20px; margin-right: 20px"
@@ -53,9 +53,9 @@
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
               <a
-                class="nav-link active me-3"
+                class="nav-link me-3 active"
                 aria-current="page"
-                href="home"
+                href="/home"
               >Home</a>
             </li>
             <li class="nav-item">
@@ -85,7 +85,7 @@
             <a class="btn btn-secondary btn-submit ms-5" href="/contact">Contact
               Me</a>
           </div>
-          {{! <a href="contact" class="btn btn-secondary">Contact Me</a> }}
+
         </div>
       </div>
     </nav>
@@ -188,7 +188,7 @@
                     style="box-shadow: 2px 4px 8px rgb(102, 102, 102)"
                   >
                     <img
-                      src="./assets/images/red.jpg"
+                      src="/uploads/{{this.imageUrl}}"
                       class="card-img-top"
                       alt="Project Image"
                     />
@@ -239,6 +239,7 @@
                             color: white;"
                           >
                             Delete</a></button>
+
                       </div>
                     </div>
                   </div>
