fix project detail, task week 4 done

--- a/views/projectDetail.hbs
+++ b/views/projectDetail.hbs
@@ -88,9 +88,9 @@
       <div class="contentDetail">
         <div class="upper">
           <div class="leftDetail">
-            <img src="assests/images/Mobile-App-Statistics.jpg" alt="" />
+            <img src="/uploads/{{projectById.imageUrl}}" alt="projectImage" />
           </div>
-          <div class="rightDetail">
+          <div class="rightDetail" style="margin-top: 12px;">
             <div>
               <h2>Duration</h2>
               <p>
